// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple patterns  1`] = `
{
  "stderr": "",
  "stdout": "directory/file.js
directory/nested-directory/nested-directory-file.js
other-directory/file.js
other-directory/nested-directory/nested-directory-file.js",
  "write": [],
}
`;

exports[`multiple patterns by with ignore pattern, doesn't ignore node_modules with --with-node-modules flag  1`] = `
{
  "stderr": "",
  "stdout": "node_modules/node-module.js
other-directory/file.js
other-directory/nested-directory/nested-directory-file.js
other-regular-modules.js
regular-module.js",
  "write": [],
}
`;

exports[`multiple patterns by with ignore pattern, ignores node_modules by default  1`] = `
{
  "stderr": "",
  "stdout": "other-directory/file.js
other-directory/nested-directory/nested-directory-file.js
other-regular-modules.js
regular-module.js",
  "write": [],
}
`;

exports[`multiple patterns by with ignore pattern, ignores node_modules by with ./**/*.js  1`] = `
{
  "stderr": "",
  "stdout": "other-directory/file.js
other-directory/nested-directory/nested-directory-file.js
other-regular-modules.js
regular-module.js",
  "write": [],
}
`;

exports[`multiple patterns with ignore nested directories pattern  1`] = `
{
  "stderr": "",
  "stdout": "directory/file.js
other-directory/file.js
other-regular-modules.js
regular-module.js",
  "write": [],
}
`;

exports[`multiple patterns with non exists pattern  1`] = `
{
  "stderr": "[error] No files matching the pattern were found: "non-existent.js".",
  "stdout": "directory/file.js
directory/nested-directory/nested-directory-file.js",
  "write": [],
}
`;

exports[`multiple patterns, throw error and exit with non zero code on non existing files  1`] = `
{
  "stderr": "[error] No files matching the pattern were found: "non-existent.js".
[error] No files matching the pattern were found: "other-non-existent.js".",
  "stdout": "",
  "write": [],
}
`;

exports[`no errors on empty patterns  1`] = `
{
  "stderr": "",
  "stdout": "",
  "write": [],
}
`;
